--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@ publications and research grants.
                             <ul class='list'>
                                 <div class="list-items">
                                     <li><input type="checkbox" name="agriculture" class="subset" id="waste-water-loan" data-cut="498000000">
-                                        <label class="list">Water and Wastewater loan and grant program
+                                        <label class="list">Eliminate the Water and Wastewater loan and grant program
                                 </label></li>
                                     <li><input type="checkbox" name="agriculture" class="subset" id="rural-business-cooperative" data-cut="95000000">
-                                        <label class="list">Rural Business and Cooperative Service discretionary activities</label></li>
+                                        <label class="list">Cut the budget of the Rural Business and Cooperative Service discretionary activities</label></li>
                                     <li><input type="checkbox" name="agriculture" class="subset" id="mcgovern-dole" data-cut="195000000">
-                                        <label class="list">McGovern-Dole International Food for Education program</label></li>
+                                        <label class="list">Eliminate the International Food for Education program</label></li>
                                     <li><input type="checkbox" name="agriculture" class="subset" data-cut="3912000000">
-                                        <label class="list">Other</label></li>
+                                        <label class="list">Other cuts</label></li>
                             </ul>
 
                             </div>
@@ -167,19 +167,19 @@ publications and research grants.
                                     <div class="list-items">
 
                                         <li><input type="checkbox" name="commerce" class="subset" id="economic-development-administration" data-cut="221000000">
-                                            <label class="list">Economic Development Administration</label></li>
+                                            <label class="list">Eliminate the Economic Development Administration</label></li>
 
                                         <li><input type="checkbox" name="commerce" class="subset" id="minority-business" data-cut="35600000">
-                                            <label class="list">Minority Business Development Agency</label></li>
+                                            <label class="list">Eliminate the Minority Business Development Agency</label></li>
 
                                         <li><input type="checkbox" name="commerce" class="subset" id="manufacturing-extension" data-cut="124000000">
-                                            <label class="list">Manufacturing Extension Partnership Program</label></li>
+                                            <label class="list">Eliminate the Manufacturing Extension Partnership Program</label></li>
 
                                         <li><input type="checkbox" name="commerce" class="subset" id="noaa" data-cut="250000000">
-                                            <label class="list">National Oceanic and Atmospheric Administration programs and grants that support coastal and marine management, research and education</label></li>
+                                            <label class="list">Eliminate the National Oceanic and Atmospheric Administration programs and grants that support coastal and marine management, research and education</label></li>
 
                                         <li><input type="checkbox" name="commerce" class="subset" id="other_commerce" data-cut="869400000">
-                                            <label class="list">Other</label></li>
+                                            <label class="list">Other cuts</label></li>
 
                                     </div>
                                 </ul>
@@ -196,24 +196,24 @@ publications and research grants.
                                 <ul class="list">
                                     <div class="list-items">
                                         <li><input type="checkbox" name="education" class="subset" id="impact-aid-support" data-cut="66813">
-                                            <label class="list">Impact Aid Support Payments for Federal Property, which help schools that have lost a portion of their tax base because the federal
+                                            <label class="list">Cut Impact Aid Support Payments for Federal Property, which help schools that have lost a portion of their tax base because the federal
                         government bought at least 10 percent of land in their district.</label>
                                         </li>
                                         <li><input type="checkbox" name="education" class="subset" id="teacher-quality-partnership" data-cut="42500000">
-                                            <label class="list">Teacher Quality Partnership, which provides training for new teachers.</label>
+                                            <label class="list">Eliminate the Teacher Quality Partnership, which provides training for new teachers.</label>
                                         </li>
                                         <li><input type="checkbox" name="education" class="subset" id="striving-readers" data-cut="190000000">
-                                            <label class="list">Striving Readers grants, which promote literacy skills for kids until 12th grade.</label>
+                                            <label class="list">Eliminate Striving Readers grants, which promote literacy skills for kids until 12th grade.</label>
                                         </li>
                                         <li><input type="checkbox" name="education" class="subset" id="supporting-effective-instruction" data-cut="2400000000">
-                                            <label class="list">Supporting Effective Instruction state grants to support professional development for teachers and principals and
+                                            <label class="list">End Supporting Effective Instruction state grants to support professional development for teachers and principals and
                         to reduce class size.</label>
                                         </li>
                                         <li><input type="checkbox" name="education" class="subset" id="twenty-first-century" data-cut="1200000000">
-                                            <label class="list">21st Century Community Learning Centers, which funds a wide variety of before and after-school programs.</label>
+                                            <label class="list">End 21st Century Community Learning Centers, which funds a wide variety of before and after-school programs.</label>
                                         </li>
                                         <li><input type="checkbox" name="education" class="subset" id="supplemental-educational" data-cut="732000000">
-                                            <label class="list">Supplemental Education Opportunity Grants, which supply need-based grants of $100 to $400 per student</label>
+                                            <label class="list">Eliminate Supplemental Education Opportunity Grants, which supply need-based grants of $100 to $400 per student</label>
                                         </li>
                                     </div>
                                 </ul>
