re-added eliminate/cut explanation for each budget item.

--- a/index.html
+++ b/index.html
@@ -230,18 +230,18 @@ publications and research grants.
                                 <div class="list-items">
 
                                     <li><input type="checkbox" name="energy" class="subset" id="office-of-science" data-cut="900000000">
-                                        <label class="list">Office of Science</label>
+                                        <label class="list">Cut funding to the Office of Science by 17%.</label>
 
                                     </li>
                                     <li><input type="checkbox" name="energy" class="subset" id="technology-manufacturing" data-cut="5000000">
-                                        <label class="list">Advanced Technology Manufacturing Program, which provides loans to auto manufacturers or manufacturers of their components to
+                                        <label class="list">Eliminate the Advanced Technology Manufacturing Program, which provides loans to auto manufacturers or manufacturers of their components to
                         develop advanced technologies.</label>
                                     </li>
                                     <li><input type="checkbox" name="energy" class="subset" id="title-17" data-cut="37000000">
-                                        <label class="list">Title 17 Innovative Technology Loan Guarantee Program, which provides loan guarantees for innovative energy projects.</label>
+                                        <label class="list">End the Title 17 Innovative Technology Loan Guarantee Program, which provides loan guarantees for innovative energy projects.</label>
                                     </li>
                                     <li><input type="checkbox" name="energy" class="subset" id="advanced-research-projects-agency" data-cut="350000000">
-                                        <label class="list">The Advanced Research Projects Agency, which "funds high-potential, high-impact energy projects that are too early
+                                        <label class="list">Eliminate the Advanced Research Projects Agency, which "funds high-potential, high-impact energy projects that are too early
                         for private sector investment but could significantly advance the ways we generate, store, distribute and use energy".</label>
                                     </li>
                                     <li><input type="checkbox" name="energy" class="subset" id="other_energy" data-cut="732000000">
@@ -259,16 +259,16 @@ publications and research grants.
                             <ul class="list">
                                 <div class="list-items">
                                     <li><input type="checkbox" name="hhs" class="subset" id="nih" data-cut="5800000000">
-                                        <label class="list">National Institutes of Health bought at least 10 percent of land in their district.</label>
+                                        <label class="list">Cut National Institutes of Health funding by 18%.</label>
                                     </li>
                                     <li><input type="checkbox" name="hhs" class="subset" id="health-nursing-training" data-cut="403000000">
-                                        <label class="list">Health professional and nursing training programs</label>
+                                        <label class="list">Eliminate health professional and nursing training programs.</label>
                                     </li>
                                     <li><input type="checkbox" name="hhs" class="subset" id="community-service" data-cut="4200000000">
                                         <label class="list">Eliminate Office of Community Services programs like the Low Income Home Energy Assistance Program.</label>
                                     </li>
                                     <li><input type="checkbox" name="hhs" class="subset" id="other_health" data-cut="4030000000">
-                                        <label class="list">Other</label>
+                                        <label class="list">Other cuts.</label>
                                     </li>
                                 </div>
                         </details>
@@ -296,13 +296,13 @@ publications and research grants.
                                     <ul class="list">
                                         <div class="list-items">
                                             <li><input type="checkbox" name="hud" class="subset" id="community-development" data-cut="3000000000">
-                                                <label class="list">Community Development block grant program</label>
+                                                <label class="list">Eliminate the Community Development block grant program.</label>
                                             </li>
                                             <li><input type="checkbox" name="hud" class="subset" id="section-4" data-cut="35000000">
-                                                <label class="list">Section 4 capacity-building for community development and affordable housing</label>
+                                                <label class="list">Zero out funding for new Section 4 community development and affordable housing.</label>
                                             </li>
                                             <li><input type="checkbox" name="hud" class="subset" id="other_housing-urban-development" data-cut="3165000000">
-                                                <label class="list">Other</label>
+                                                <label class="list">Other cuts.</label>
                                             </li>
 
                                 </details>
@@ -317,17 +317,13 @@ publications and research grants.
                                         <ul class="list">
                                             <div class="list-items">
                                                 <li><input type="checkbox" name="interior" class="subset" id="new-federal-land" data-cut="120000000">
-                                                    <label class="list">Acquiring new federal land</label>
+                                                    <label class="list">Reduce funding for acquisition of new federal land.</label>
                                                 </li>
                                                 <li><input type="checkbox" name="interior" class="subset" id="abandoned-mine" data-cut="181000000">
-                                                    <label class="list">Abandoned mine land grants, which in FY 2017, helped fund projects in 25 states and three tribal areas eliminate dangerous conditions
-                        and pollution caused by abandoned coal mines.</label>
-                                                </li>
-                                                <li><input type="checkbox" name="interior" class="subset" id="title-17" data-cut="37000000">
-                                                    <label class="list">Title 17 Innovative Technology Loan Guarantee Program, which provides loan guarantees for innovative energy projects.</label>
+                                                    <label class="list">Eliminate abandoned mine land grants, which help reduce dangerous conditions and pollution caused by abandoned coal mines.</label>
                                                 </li>
                                                 <li><input type="checkbox" name="interior" class="subset" id="other_interior" data-cut="1199000000">
-                                                    <label class="list">Other</label>
+                                                    <label class="list">Other cuts, including eliminating federal funding for some national heritage areas and national wildlife refuges.</label>
                                                 </li>
                                     </details>
                                     </ul>
@@ -354,13 +350,13 @@ publications and research grants.
                                         <ul class="list">
                                             <div class="list-items">
                                                 <li><input type="checkbox" name="labor" class="subset" id="senior-community" data-cut="434000000">
-                                                    <label class="list">Senior Community Service Employment Program, which provides training for low-income and unmployed seniors</label>
+                                                    <label class="list">Eliminate the Senior Community Service Employment Program, which provides training for low-income and unmployed seniors.</label>
                                                 </li>
                                                 <li><input type="checkbox" name="labor" class="subset" id="osha-grant" data-cut="11000000">
-                                                    <label class="list">Occupational Safety and Health Administration's training grants</label>
+                                                    <label class="list">End the Occupational Safety and Health Administration's training grants.</label>
                                                 </li>
                                                 <li><input type="checkbox" name="labor" class="subset" id="other_labor" data-cut="2055000000">
-                                                    <label class="list">Other</label>
+                                                    <label class="list">Other cuts.</label>
                                                 </li>
                                     </details>
                                     </div>
@@ -371,7 +367,7 @@ publications and research grants.
                                             <label class="select_all">Department of State and USAID
                                             </label></summary>
 
-                                        <ul class="summary-detail">
+                                        <ul style="list-style-type:square" class="summary-detail">
                                             <li>Eliminate the Global Climate Change Initiative and cease payments to United Nations climate change programs.</li>
                                             <li>Reduce funding to the UN and affiliated agencies, including UN peacekeeping and other international organizations.</li>
                                             <li>Reduce funding for the Department of State’s Educational and Cultural Exchange (ECE) Programs.</li>
@@ -387,10 +383,10 @@ publications and research grants.
                                     <ul class="list">
                                         <div class="list-items">
                                             <li><input type="checkbox" name="treasury-international" class="subset" id="development-banks" data-cut="650000000">
-                                                <label class="list">Funding for multinational development banks, including the World Bank</label>
+                                                <label class="list">Cut funding for multinational development banks, including the World Bank</label>
                                             </li>
                                             <li><input type="checkbox" name="treasury-international" class="subset" id="other_treasury-international" data-cut="153000000">
-                                                <label class="list">Other</label>
+                                                <label class="list">Other cuts.</label>
                                             </li>
                                         </div>
                                 </details>
