styled second-page for big screens.

--- a/second-page.html
+++ b/second-page.html
@@ -39,9 +39,9 @@
 
             <p class="top-text">But the Trump administration has said this budget represents the kind of change in priorities that Trump promised to make.</p>
             <p class="top-text ">"This is the message the president wanted to send to the public, to the press, to Capitol Hill. He wanted more money for defense, more money for border enforcement, more money for law enforcement generally, more money for the vets, more money
-                for school choice," said Director of the Office of Management and Budget Mick Mulvaney during a press conference on March. "This budget simply reallocates and re-prioritizes spending."</p>
+                for school choice," said director of the Office of Management and Budget Mick Mulvaney during a press conference on March. "This budget simply reallocates and re-prioritizes spending."</p>
             <figure class="mulvaney"><img src="images/mulvaney.jpg" class=mulvaney>
-                <figcaption>Mick Mulvaney, director of the Office of Management and Budget, rolled out Trump's budeget proposal last month.</figcaption>
+                <figcaption>Mick Mulvaney, director of the Office of Management and Budget, rolled out Trump's budget proposal last month.</figcaption>
                 <!--this image is dedicated to TC-->
 
 
