I forget what I worked on but I think it involved prettying up the css on the lists.

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 </div>
             </div>
             <div class="top-text">
-                <p>in 2018. But he and budget director Mick Mulvaney have also pledged to balance the budget without raising the deficit or cutting entitlements. That means balancing out the increase in defense spending with budget cuts across other programs
-                    and departments.</p>
-                <p>The administration's budget blueprint lays out the programs that are on the chopping block. Help president Trump choose which budgets to cut. Click the triangle next to a department to find out more about its proposed cuts.</p>
+                <p>in 2018. But he and Office of Management and Budget director Mick Mulvaney have also pledged to balance the budget without raising the deficit or cutting entitlements. That means balancing out the increase in defense spending with cuts
+                    across other programs and departments.</p>
+                <p>The administration's budget blueprint lays out the programs that are on the chopping block. Help president Trump choose which budgets to cut. Click the triangle next to a department to expand for more information.</p>
             </div>
 
 
@@ -166,7 +166,6 @@ publications and research grants.
                             </summary>
                             <ul class="list">
                                 <div class="list-items">
-
                                     <li><input type="checkbox" name="commerce" class="subset" id="economic-development-administration" data-cut="221000000"></input>
                                         <label class="list">Eliminate the Economic Development Administration.</label></li>
 
@@ -181,12 +180,12 @@ publications and research grants.
 
                                     <li><input type="checkbox" name="commerce" class="subset" id="other_commerce" data-cut="869400000"></input>
                                         <label class="list">Other cuts</label></li>
-
                                 </div>
                             </ul>
+                        </details>
                     </div>
-                    </details>
                     <!--closes commerce-->
+
                     <!-- <ul class="department"> -->
                     <div class="education">
                         <details>
@@ -218,72 +217,74 @@ publications and research grants.
                                     </li>
                                 </div>
                             </ul>
+                        </details>
                     </div>
                     <!--closes education-->
-                    </details>
 
-
-                    <details>
-                        <summary><input type="checkbox" class='select_all' name='energy'>
-                            <label class="select_all">Department of Energy</label></input>
-                        </summary>
-                        <ul class="list">
-                            <div class="list-items">
-
-                                <li><input type="checkbox" name="energy" class="subset" id="office-of-science" data-cut="900000000"></input>
-                                    <label class="list">Cut funding to the Office of Science by 17%.</label>
-                                </li>
-                                <li><input type="checkbox" name="energy" class="subset" id="technology-manufacturing" data-cut="5000000"></input>
-                                    <label class="list">Eliminate the Advanced Technology Manufacturing Program, which provides loans to auto manufacturers or manufacturers of their components to
-                        develop advanced technologies.</label>
-                                </li>
-                                <li><input type="checkbox" name="energy" class="subset" id="title-17" data-cut="37000000"></input>
-                                    <label class="list">End the Title 17 Innovative Technology Loan Guarantee Program, which provides loan guarantees for innovative energy projects.</label>
-                                </li>
-                                <li><input type="checkbox" name="energy" class="subset" id="advanced-research-projects-agency" data-cut="350000000"></input>
-                                    <label class="list">Eliminate the Advanced Research Projects Agency, which "funds high-potential, high-impact energy projects that are too early
-                        for private sector investment but could significantly advance the ways we generate, store, distribute and use energy".</label>
-                                </li>
-                                <li><input type="checkbox" name="energy" class="subset" id="other_energy" data-cut="732000000"></input>
-                                    <label class="list">Other</label>
-                                </li>
-                            </div>
-                        </ul>
-                    </details>
-
-
-                    <details>
-                        <summary><input type="checkbox" class='select_all' name='hhs'>
-                            <label class="select_all">Department of Health and Human Services</label></input>
-                        </summary>
-                        <ul class="list">
-                            <div class="list-items">
-                                <li><input type="checkbox" name="hhs" class="subset" id="nih" data-cut="5800000000"></input>
-                                    <label class="list">Cut National Institutes of Health funding by 18%.</label>
-                                </li>
-                                <li><input type="checkbox" name="hhs" class="subset" id="health-nursing-training" data-cut="403000000"></input>
-                                    <label class="list">Eliminate health professional and nursing training programs.</label>
-                                </li>
-                                <li><input type="checkbox" name="hhs" class="subset" id="community-service" data-cut="4200000000"></input>
-                                    <label class="list">Eliminate Office of Community Services programs like the Low Income Home Energy Assistance Program.</label>
-                                </li>
-                                <li><input type="checkbox" name="hhs" class="subset" id="other_health" data-cut="4030000000"></input>
-                                    <label class="list">Other cuts.</label>
-                                </li>
-                            </div>
-                    </details>
-                    </ul>
-                    <div class="fema">
+                    <div class="energy">
                         <details>
-                            <summary><input type="checkbox" class='select_all' name='fema'>
-                                <label class="select_all">Federal Emergency Management Agency</label></input>
+                            <summary><input type="checkbox" class='select_all' name='energy'>
+                                <label class="select_all">Department of Energy</label></input>
                             </summary>
                             <ul class="list">
                                 <div class="list-items">
-                                    <li><input type="checkbox" name="fema" class="subset" id="fema" data-cut="667000000"></input>
-                                        <label class="list">Eliminate or reduce grants for programs like the pre-disaster mitigation and Homeland Security and set up federal-local cost-sharing for other grants.</label>
+
+                                    <li><input type="checkbox" name="energy" class="subset" id="office-of-science" data-cut="900000000"></input>
+                                        <label class="list">Cut funding to the Office of Science by 17%.</label>
+                                    </li>
+                                    <li><input type="checkbox" name="energy" class="subset" id="technology-manufacturing" data-cut="5000000"></input>
+                                        <label class="list">Eliminate the Advanced Technology Manufacturing Program, which provides loans to auto manufacturers or manufacturers of their components to
+                        develop advanced technologies.</label>
+                                    </li>
+                                    <li><input type="checkbox" name="energy" class="subset" id="title-17" data-cut="37000000"></input>
+                                        <label class="list">End the Title 17 Innovative Technology Loan Guarantee Program, which provides loan guarantees for innovative energy projects.</label>
+                                    </li>
+                                    <li><input type="checkbox" name="energy" class="subset" id="advanced-research-projects-agency" data-cut="350000000"></input>
+                                        <label class="list">Eliminate the Advanced Research Projects Agency, which "funds high-potential, high-impact energy projects that are too early
+                        for private sector investment but could significantly advance the ways we generate, store, distribute and use energy".</label>
+                                    </li>
+                                    <li><input type="checkbox" name="energy" class="subset" id="other_energy" data-cut="732000000"></input>
+                                        <label class="list">Other</label>
                                     </li>
                                 </div>
+                            </ul>
+                        </details>
+                    </div>
+
+                    <div class="hhs">
+                        <details>
+                            <summary><input type="checkbox" class='select_all' name='hhs'>
+                                <label class="select_all">Department of Health and Human Services</label></input>
+                            </summary>
+                            <ul class="list">
+                                <div class="list-items">
+                                    <li><input type="checkbox" name="hhs" class="subset" id="nih" data-cut="5800000000"></input>
+                                        <label class="list">Cut National Institutes of Health funding by 18%.</label>
+                                    </li>
+                                    <li><input type="checkbox" name="hhs" class="subset" id="health-nursing-training" data-cut="403000000"></input>
+                                        <label class="list">Eliminate health professional and nursing training programs.</label>
+                                    </li>
+                                    <li><input type="checkbox" name="hhs" class="subset" id="community-service" data-cut="4200000000"></input>
+                                        <label class="list">Eliminate Office of Community Services programs like the Low Income Home Energy Assistance Program.</label>
+                                    </li>
+                                    <li><input type="checkbox" name="hhs" class="subset" id="other_health" data-cut="4030000000"></input>
+                                        <label class="list">Other cuts.</label>
+                                    </li>
+                                </div>
+                            </ul>
+                        </details>
+                    </div>
+
+                    <div class="fema">
+                        <details>
+                            <summary><input type="checkbox" name="fema" class="subset" id="other_fema" data-cut="667000000"></input>
+                                <label class="select_all">Federal Emergency Management Agency</label></input>
+                            </summary>
+                            <ul class="list">
+                                <ul class="summary-detail">
+                                    <label class="list">
+                                        Eliminate or reduce grants for programs like the pre-disaster mitigation and Homeland Security and set up federal-local cost-sharing for other grants.</label>
+                                </ul>
                             </ul>
                         </details>
                     </div>
@@ -294,7 +295,7 @@ publications and research grants.
                                 <label class="select_all">Department of Housing and Urban Development</label></input>
                             </summary>
                             <ul class="list">
-                                <div class="list-items">
+                                <ul class="list-items">
                                     <li><input type="checkbox" name="hud" class="subset" id="community-development" data-cut="3000000000"></input>
                                         <label class="list">Eliminate the Community Development block grant program.</label>
                                     </li>
@@ -304,10 +305,11 @@ publications and research grants.
                                     <li><input type="checkbox" name="hud" class="subset" id="other_housing-urban-development" data-cut="3165000000"></input>
                                         <label class="list">Other cuts.</label>
                                     </li>
-                                </div>
+                                </ul>
                             </ul>
                         </details>
                     </div>
+
                     <div class="interior">
                         <details>
                             <summary><input type="checkbox" class='select_all' name='interior'>
@@ -337,7 +339,9 @@ publications and research grants.
                             <ul class="list">
                                 <!-- <div class="list-items"> -->
                                 <ul class="summary-detail">
-                                    <label class="list">Eliminate programs like the State Criminal Alien Assistance Program and reduce spending on federal prison construction.</label></ul>
+                                    <label class="list">Eliminate programs like the State Criminal Alien Assistance Program and reduce spending on federal prison construction.</label>
+                                </ul>
+                            </ul>
                         </details>
                     </div>
 
@@ -500,7 +504,7 @@ publications and research grants.
                      of the country in partnership with private organizations.</label>
                                     </li>
                                     <li><input type="checkbox" name="small-business-admin" class="subset" id="other_small-business-admin" data-cut="31200000">
-                                        <label class="list">Other</label>
+                                        <label class="list">Other cuts.</label>
                                     </li>
                                 </div>
                             </ul>
